--- a/index.resumofinanceiro.html
+++ b/index.resumofinanceiro.html
@@ -115,7 +115,7 @@
 
 <header>
   <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
-  <h1>📥 Resumo de Entradas</h1>
+  <h1>Entradas</h1>
 </header>
 
 <div class="conteudo">
