--- a/index.cancelamentos.html
+++ b/index.cancelamentos.html
@@ -131,7 +131,7 @@
   <header>
     <div class="header-content">
       <img src="https://drive.google.com/uc?export=view&id=1jyyUNfY1Wy6i1-LArwVOn1ghxCgePQ9K" alt="Logo CB Systems">
-      <h1>📋 Cancelamentos</h1>
+      <h1>Cancelamentos</h1>
     </div>
   </header>
 
