--- a/index.relatorios.html
+++ b/index.relatorios.html
@@ -121,7 +121,7 @@
 </head>
 <body>
   <header>
-    <img src="https://grupodvbr.github.io/MENU-LEONARDO/logo.png" alt="Logo">
+    <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo">
     <h1>Relatório Consolidado</h1>
   </header>
 
