--- a/index.relatorios.html
+++ b/index.relatorios.html
@@ -13,85 +13,29 @@
     }
 
     header {
+      background: linear-gradient(to bottom, #ffffff, #f0f0f0);
+      padding: 20px 0;
+      border-bottom: 1px solid #ccc;
       text-align: center;
-      padding: 20px;
-      border-bottom: 1px solid #444;
-      background-color: #111;
+      color: #222;
     }
 
-    header img {
-      height: 60px;
-    }
-
-    header h1 {
-      margin: 10px 0 0;
-      font-size: 26px;
-      color: white;
-    }
-
-    .grid {
+    header .header-content {
       display: flex;
-      flex-direction: row;
-      justify-content: center;
-      gap: 20px;
-      padding: 20px;
-      overflow-x: auto;
-    }
-
-    iframe {
-      width: 400px;
-      height: 600px;
-      border: none;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
-      background: white;
-    }
-
-    /* Scroll para dispositivos menores */
-    .grid::-webkit-scrollbar {
-      height: 10px;
-    }
-
-    .grid::-webkit-scrollbar-thumb {
-      background: #444;
-      border-radius: 10px;
-    }
-
-    .grid::-webkit-scrollbar-track {
-      background: #222;
-    }
-  </style>
-</head>
-<body>
-  <header><!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <title>Relatório Consolidado</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #111;
-      color: white;
-    }
-
-    header {
-      text-align: center;
-      padding: 20px;
-      border-bottom: 1px solid #444;
-      background-color: #111;
+      flex-direction: column;
+      align-items: center;
     }
 
     header img {
       height: 60px;
+      margin-bottom: 10px;
     }
 
     header h1 {
-      margin: 10px 0 0;
-      font-size: 26px;
-      color: white;
+      margin: 0;
+      font-size: 1.8em;
+      font-weight: bold;
+      color: #222;
     }
 
     .grid {
@@ -121,24 +65,10 @@
 </head>
 <body>
   <header>
-    <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo">
-    <h1>Relatório Consolidado</h1>
-  </header>
-
-  <div class="grid">
-    <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.resumofinanceiro.html"></iframe>
-    <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.delivery.html"></iframe>
-    <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.cancelamentos.html"></iframe>
-    <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.conciliacao.html"></iframe>
-    <!-- Adicione quantos quiser -->
-    <!-- Exemplo: -->
-    <!-- <iframe src="outra-pagina.html"></iframe> -->
-  </div>
-</body>
-</html>
-
-    <img src="https://grupodvbr.github.io/MENU-LEONARDO/logo.png" alt="Logo">
-    <h1>Relatório Consolidado</h1>
+    <div class="header-content">
+      <img src="https://grupodvbr.github.io/MENU-LEONARDO/logo.png" alt="Logo CB Systems">
+      <h1>Relatório Consolidado</h1>
+    </div>
   </header>
 
   <div class="grid">
