--- a/index.relatorios.html
+++ b/index.relatorios.html
@@ -66,7 +66,7 @@
 <body>
   <header>
     <div class="header-content">
-      <img src="https://grupodvbr.github.io/MENU-LEONARDO/logo.png" alt="Logo CB Systems">
+      <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
       <h1>Relatório Consolidado</h1>
     </div>
   </header>
