--- a/index.relatorios.html
+++ b/index.relatorios.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Relatório Consolidado</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
       margin: 0;
@@ -11,71 +11,42 @@
       background-color: #111;
       color: white;
     }
-
-    header {
-      background: linear-gradient(to bottom, #ffffff, #f0f0f0);
-      padding: 20px 0;
-      border-bottom: 1px solid #ccc;
-      text-align: center;
-      color: #222;
-    }
-
-    header .header-content {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    header img {
-      height: 60px;
-      margin-bottom: 10px;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 1.8em;
-      font-weight: bold;
-      color: #222;
-    }
-
     .grid {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
       gap: 20px;
       padding: 20px;
     }
-
     iframe {
-      width: 400px;
+      width: 100%;
       height: 600px;
       border: none;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
       background: white;
     }
-
-    @media (max-width: 420px) {
+    @media (max-width: 1200px) {
+      .grid {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+    @media (max-width: 600px) {
+      .grid {
+        grid-template-columns: 1fr;
+      }
       iframe {
-        width: 100%;
         height: 500px;
       }
     }
   </style>
 </head>
 <body>
-  <header>
-    <div class="header-content">
-      <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
-      <h1>Relatório Consolidado</h1>
-    </div>
-  </header>
-
   <div class="grid">
     <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.resumofinanceiro.html"></iframe>
     <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.delivery.html"></iframe>
     <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.cancelamentos.html"></iframe>
     <iframe src="https://grupodvbr.github.io/MENU-LEONARDO/index.conciliacao.html"></iframe>
+    <!-- Adicione mais iframes aqui se quiser -->
   </div>
 </body>
 </html>
