--- a/index.cancelamentos.html
+++ b/index.cancelamentos.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Cancelamentos - Grupo DV</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -11,7 +11,6 @@
       margin: 0;
       padding: 0;
     }
-
     header {
       background-color: white;
       padding: 10px 20px;
@@ -19,40 +18,35 @@
       align-items: center;
       border-bottom: 1px solid #ccc;
     }
-
     header img {
       height: 50px;
       margin-right: 20px;
     }
-
     header h1 {
       margin: 0 auto;
       font-size: 1.6em;
       font-weight: bold;
       text-align: center;
       flex: 1;
+      color: #000;
     }
-
     .container {
       padding: 20px;
       max-width: 1200px;
       margin: auto;
     }
-
     .filters {
       display: flex;
       flex-wrap: wrap;
       gap: 10px;
       margin-bottom: 20px;
     }
-
     .filters select, .filters input {
       padding: 10px;
       border-radius: 8px;
       border: 1px solid #ccc;
       flex: 1 1 200px;
     }
-
     .grupo-empresa {
       background: white;
       border-radius: 12px;
@@ -60,33 +54,27 @@
       margin-bottom: 30px;
       padding: 15px 20px;
     }
-
     .grupo-empresa h2 {
       margin-top: 0;
       font-size: 1.4em;
       color: #2c3e50;
     }
-
     .item-cancelamento {
       margin-bottom: 10px;
       border-bottom: 1px solid #eee;
       padding-bottom: 10px;
     }
-
     .item-cancelamento:last-child {
       border-bottom: none;
     }
-
     .item-cancelamento p {
       margin: 4px 0;
     }
-
     .subtotal {
       font-weight: bold;
       margin-top: 10px;
       font-size: 1.1em;
     }
-
     .btn-whatsapp {
       background-color: #25D366;
       color: white;
@@ -98,7 +86,6 @@
       float: right;
       margin-bottom: 10px;
     }
-
     .total-cancelado {
       background: #fff;
       padding: 15px;
@@ -108,7 +95,6 @@
       margin-bottom: 20px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.05);
     }
-
     @media (max-width: 600px) {
       header {
         flex-direction: column;
@@ -116,6 +102,11 @@
       }
       header img {
         margin: 0 0 10px;
+      }
+      .btn-whatsapp {
+        float: none;
+        width: 100%;
+        margin-top: 10px;
       }
     }
   </style>
@@ -129,10 +120,10 @@
 
 <div class="container">
   <div class="filters">
-    <input type="date" id="dataInicio">
-    <input type="date" id="dataFim">
+    <input type="date" id="dataInicio" />
+    <input type="date" id="dataFim" />
     <select id="filtroEmpresa"></select>
-    <input type="text" id="filtroBusca" placeholder="Buscar item...">
+    <input type="text" id="filtroBusca" placeholder="Buscar item..." />
   </div>
 
   <button class="btn-whatsapp" onclick="enviarWhatsapp()">📤 Enviar via WhatsApp</button>
@@ -145,156 +136,156 @@
 </div>
 
 <script>
-const URL_SCRIPT = 'https://script.google.com/macros/s/AKfycbzaS3QgsNyePSGRlpy3Ue6EuQw75QYID9jadb-KezTv8y9Mg6d8HFoKUCzcBRqzM5aMBg/exec';
-let cancelamentos = [];
+  const URL_SCRIPT = 'https://script.google.com/macros/s/AKfycbzaS3QgsNyePSGRlpy3Ue6EuQw75QYID9jadb-KezTv8y9Mg6d8HFoKUCzcBRqzM5aMBg/exec';
+  let cancelamentos = [];
 
-async function carregarDados() {
-  const res = await fetch(URL_SCRIPT);
-  cancelamentos = await res.json();
-  preencherFiltros();
-  aplicarFiltros();
-  preencherDataPadrao();
-}
+  async function carregarDados() {
+    const res = await fetch(URL_SCRIPT);
+    cancelamentos = await res.json();
+    preencherFiltros();
+    aplicarFiltros();
+    preencherDataPadrao();
+  }
 
-function formatarMoeda(valor) {
-  return valor.toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' });
-}
+  function formatarMoeda(valor) {
+    return valor.toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' });
+  }
 
-function formatarDataBR(dataISO) {
-  const [ano, mes, dia] = dataISO.split("-");
-  return `${dia}/${mes}/${ano}`;
-}
+  function formatarDataBR(dataISO) {
+    const [ano, mes, dia] = dataISO.split("-");
+    return `${dia}/${mes}/${ano}`;
+  }
 
-function preencherFiltros() {
-  const empresas = [...new Set(cancelamentos.map(c => c.empresa))].sort();
-  const selectEmpresa = document.getElementById('filtroEmpresa');
-  selectEmpresa.innerHTML = `<option value="">Todas as Empresas</option>` + 
-    empresas.map(emp => `<option value="${emp}">${emp}</option>`).join('');
-}
+  function preencherFiltros() {
+    const empresas = [...new Set(cancelamentos.map(c => c.empresa))].sort();
+    const selectEmpresa = document.getElementById('filtroEmpresa');
+    selectEmpresa.innerHTML = `<option value="">Todas as Empresas</option>` +
+      empresas.map(emp => `<option value="${emp}">${emp}</option>`).join('');
+  }
 
-function preencherDataPadrao() {
-  const hoje = new Date();
-  const ontem = new Date(hoje);
-  ontem.setDate(hoje.getDate() - 1);
-  const formato = d => d.toISOString().split('T')[0];
-  document.getElementById("dataInicio").value = formato(ontem);
-  document.getElementById("dataFim").value = formato(ontem);
-}
+  function preencherDataPadrao() {
+    const hoje = new Date();
+    const ontem = new Date(hoje);
+    ontem.setDate(hoje.getDate() - 1);
+    const formato = d => d.toISOString().split('T')[0];
+    document.getElementById("dataInicio").value = formato(ontem);
+    document.getElementById("dataFim").value = formato(ontem);
+  }
 
-function aplicarFiltros() {
-  const empresaFiltro = document.getElementById('filtroEmpresa').value;
-  const busca = document.getElementById('filtroBusca').value.toLowerCase();
-  const dataInicio = document.getElementById('dataInicio').value;
-  const dataFim = document.getElementById('dataFim').value;
+  function aplicarFiltros() {
+    const empresaFiltro = document.getElementById('filtroEmpresa').value;
+    const busca = document.getElementById('filtroBusca').value.toLowerCase();
+    const dataInicio = document.getElementById('dataInicio').value;
+    const dataFim = document.getElementById('dataFim').value;
 
-  const lista = document.getElementById("listaCancelamentos");
-  lista.innerHTML = "";
-  document.getElementById("rankingContainer")?.remove();
+    const lista = document.getElementById("listaCancelamentos");
+    lista.innerHTML = "";
+    document.getElementById("rankingContainer")?.remove();
 
-  let totalGeral = 0;
-  const grupos = {};
+    let totalGeral = 0;
+    const grupos = {};
 
-  cancelamentos.forEach(c => {
-    if (
-      (empresaFiltro && c.empresa !== empresaFiltro) ||
-      (busca && !c.item.toLowerCase().includes(busca)) ||
-      (dataInicio && c.data < dataInicio) ||
-      (dataFim && c.data > dataFim)
-    ) return;
+    cancelamentos.forEach(c => {
+      if (
+        (empresaFiltro && c.empresa !== empresaFiltro) ||
+        (busca && !c.item.toLowerCase().includes(busca)) ||
+        (dataInicio && c.data < dataInicio) ||
+        (dataFim && c.data > dataFim)
+      ) return;
 
-    if (!grupos[c.empresa]) grupos[c.empresa] = [];
-    grupos[c.empresa].push(c);
-  });
+      if (!grupos[c.empresa]) grupos[c.empresa] = [];
+      grupos[c.empresa].push(c);
+    });
 
-  Object.keys(grupos).forEach(empresa => {
-    const grupo = grupos[empresa];
-    let subtotal = 0;
+    Object.keys(grupos).forEach(empresa => {
+      const grupo = grupos[empresa];
+      let subtotal = 0;
 
-    const divGrupo = document.createElement("div");
-    divGrupo.className = "grupo-empresa";
+      const divGrupo = document.createElement("div");
+      divGrupo.className = "grupo-empresa";
 
-    const primeiraData = grupo[0]?.data || "";
-    grupo.forEach(c => subtotal += c.valor);
-    totalGeral += subtotal;
+      const primeiraData = grupo[0]?.data || "";
+      grupo.forEach(c => subtotal += c.valor);
+      totalGeral += subtotal;
 
+      const titulo = document.createElement("h2");
+      titulo.textContent = `📅 ${formatarDataBR(primeiraData)} • 🏢 ${empresa} — Subtotal: ${formatarMoeda(subtotal)}`;
+      divGrupo.appendChild(titulo);
+
+      grupo.forEach(c => {
+        const itemDiv = document.createElement("div");
+        itemDiv.className = "item-cancelamento";
+
+        const [nomeItem, valorInfo] = c.item.split(" – ");
+        itemDiv.innerHTML = `
+          <p> ${nomeItem}</p>
+          <p>💸 ${valorInfo || formatarMoeda(c.valor)}</p>
+        `;
+        divGrupo.appendChild(itemDiv);
+      });
+
+      lista.appendChild(divGrupo);
+
+      if (empresaFiltro) {
+        exibirRanking(grupo);
+      }
+    });
+
+    document.getElementById("totalCancelado").textContent = formatarMoeda(totalGeral);
+  }
+
+  function exibirRanking(listaItens) {
+    const container = document.createElement("div");
+    container.id = "rankingContainer";
+    container.className = "grupo-empresa";
     const titulo = document.createElement("h2");
-    titulo.textContent = `📅 ${formatarDataBR(primeiraData)} • 🏢 ${empresa} — Subtotal: ${formatarMoeda(subtotal)}`;
-    divGrupo.appendChild(titulo);
+    titulo.textContent = "🏆 Top 7 Itens Mais Caros";
+    container.appendChild(titulo);
 
-    grupo.forEach(c => {
-      const itemDiv = document.createElement("div");
-      itemDiv.className = "item-cancelamento";
+    const ranking = listaItens
+      .slice()
+      .sort((a, b) => b.valor - a.valor)
+      .slice(0, 7);
 
-      const [nomeItem, valorInfo] = c.item.split(" – ");
-      itemDiv.innerHTML = `
-        <p> ${nomeItem}</p>
-        <p>💸 ${valorInfo || formatarMoeda(c.valor)}</p>
-      `;
-      divGrupo.appendChild(itemDiv);
+    ranking.forEach((item, index) => {
+      const linha = document.createElement("p");
+      linha.textContent = `${index + 1}. ${item.item} — ${formatarMoeda(item.valor)} (${formatarDataBR(item.data)})`;
+      container.appendChild(linha);
     });
 
-    lista.appendChild(divGrupo);
+    document.getElementById("listaCancelamentos").prepend(container);
+  }
 
-    if (empresaFiltro) {
-      exibirRanking(grupo);
-    }
-  });
+  function enviarWhatsapp() {
+    let mensagem = `📢 *Resumo de Cancelamentos por Empresa*%0A`;
+    const agrupado = {};
 
-  document.getElementById("totalCancelado").textContent = formatarMoeda(totalGeral);
-}
-
-function exibirRanking(listaItens) {
-  const container = document.createElement("div");
-  container.id = "rankingContainer";
-  container.className = "grupo-empresa";
-  const titulo = document.createElement("h2");
-  titulo.textContent = "🏆 Top 7 Itens Mais Caros";
-  container.appendChild(titulo);
-
-  const ranking = listaItens
-    .slice()
-    .sort((a, b) => b.valor - a.valor)
-    .slice(0, 7);
-
-  ranking.forEach((item, index) => {
-    const linha = document.createElement("p");
-    linha.textContent = `${index + 1}. ${item.item} — ${formatarMoeda(item.valor)} (${formatarDataBR(item.data)})`;
-    container.appendChild(linha);
-  });
-
-  document.getElementById("listaCancelamentos").prepend(container);
-}
-
-function enviarWhatsapp() {
-  let mensagem = `📢 *Resumo de Cancelamentos por Empresa*%0A`;
-  const agrupado = {};
-
-  cancelamentos.forEach(c => {
-    if (!agrupado[c.empresa]) agrupado[c.empresa] = [];
-    agrupado[c.empresa].push(c);
-  });
-
-  Object.entries(agrupado).forEach(([empresa, itens]) => {
-    let subtotal = 0;
-    mensagem += `\n\n🏢 *${empresa}*`;
-    itens.forEach(c => {
-      subtotal += c.valor;
-      mensagem += `\n${c.item} - 💸 ${formatarMoeda(c.valor)} - ${formatarDataBR(c.data)}`;
+    cancelamentos.forEach(c => {
+      if (!agrupado[c.empresa]) agrupado[c.empresa] = [];
+      agrupado[c.empresa].push(c);
     });
-    mensagem += `\nSubtotal: *${formatarMoeda(subtotal)}*`;
-  });
 
-  const telefone = "5577999761436";
-  const url = `https://wa.me/${telefone}?text=${encodeURIComponent(mensagem)}`;
-  window.open(url, "_blank");
-}
+    Object.entries(agrupado).forEach(([empresa, itens]) => {
+      let subtotal = 0;
+      mensagem += `\n\n🏢 *${empresa}*`;
+      itens.forEach(c => {
+        subtotal += c.valor;
+        mensagem += `\n${c.item} - 💸 ${formatarMoeda(c.valor)} - ${formatarDataBR(c.data)}`;
+      });
+      mensagem += `\nSubtotal: *${formatarMoeda(subtotal)}*`;
+    });
 
-document.getElementById('filtroEmpresa').addEventListener('change', aplicarFiltros);
-document.getElementById('dataInicio').addEventListener('change', aplicarFiltros);
-document.getElementById('dataFim').addEventListener('change', aplicarFiltros);
-document.getElementById('filtroBusca').addEventListener('input', aplicarFiltros);
+    const telefone = "5577999761436";
+    const url = `https://wa.me/${telefone}?text=${encodeURIComponent(mensagem)}`;
+    window.open(url, "_blank");
+  }
 
-carregarDados();
+  document.getElementById('filtroEmpresa').addEventListener('change', aplicarFiltros);
+  document.getElementById('dataInicio').addEventListener('change', aplicarFiltros);
+  document.getElementById('dataFim').addEventListener('change', aplicarFiltros);
+  document.getElementById('filtroBusca').addEventListener('input', aplicarFiltros);
+
+  carregarDados();
 </script>
 
 </body>
