--- a/index.meta.html
+++ b/index.meta.html
@@ -117,7 +117,7 @@
 
 <header>
   <img src="https://static.wixstatic.com/media/d830b0_8cec50a98bbf4775814dbfa5386585e8~mv2.png" alt="Logo CB Systems">
-  <h1>📊 Painel de Metas - Grupo DV</h1>
+  <h1>Painel de Metas</h1>
 </header>
 
 <div class="container">
